--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 *.suo
 *.user
 _ReSharper.*
-bin
-obj
+bin/
+obj/
 packages
+/RoomBookingNetCore3.Api/bin
+/RoomBookingNetCore3.Api/obj
+/RoomBookingNetCore3.Business/obj
+/RoomBookingNetCore3.Business/bin
