--- a/RoomBookingNetCore3.Bdd/RoomBookingNetCore3.Bdd.csproj
+++ b/RoomBookingNetCore3.Bdd/RoomBookingNetCore3.Bdd.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -21,6 +23,7 @@
     <PackageReference Include="SpecFlow.NUnit" Version="3.1.82" />
     <PackageReference Include="SpecFlow.NUnit.Runners" Version="3.1.82" />
     <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.1.82" />
+    <PackageReference Include="System.Linq.Async" Version="4.0.0" />
   </ItemGroup>
 
 </Project>
