--- a/RoomBookingNetCore3.Common/RoomBookingNetCore3.Common.csproj
+++ b/RoomBookingNetCore3.Common/RoomBookingNetCore3.Common.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
+    <PackageReference Include="System.Linq.Async" Version="4.0.0" />
   </ItemGroup>
 
 </Project>
