--- a/RoomBookingNetCore3.Dal/RoomBookingNetCore3.Dal.csproj
+++ b/RoomBookingNetCore3.Dal/RoomBookingNetCore3.Dal.csproj
@@ -1,11 +1,21 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\RoomBookingNetCore3.Common\RoomBookingNetCore3.Common.csproj" />
   </ItemGroup>
+
+  <!--<ItemGroup>
+    <PackageReference Include="System.Interactive.Async" Version="4.0.0" />
+    --><!--<PackageReference Include="System.Linq.Async" Version="4.0.0" />--><!--
+  </ItemGroup>-->
+
+  <!--<ItemGroup>
+    <ProjectReference Include="..\RoomBookingNetCore3.Common\RoomBookingNetCore3.Common.csproj" />
+  </ItemGroup>-->
 
 </Project>
