--- a/RoomBookingNetCore3.Test/RoomBookingNetCore3.Test.csproj
+++ b/RoomBookingNetCore3.Test/RoomBookingNetCore3.Test.csproj
@@ -1,10 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-
-    <IsPackable>false</IsPackable>
-  </PropertyGroup>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
+ </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.11.0" />
@@ -13,15 +11,15 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.0.0" />
     <PackageReference Include="MSTest.TestFramework" Version="2.0.0" />
-    <PackageReference Include="coverlet.collector" Version="1.0.1" />
+    <!--   <PackageReference Include="coverlet.collector" Version="1.0.1" /> -->
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="System.ComponentModel.TypeConverter" Version="4.3.0" />
+    <!--<PackageReference Include="System.Linq.Async" Version="4.0.0" /> -->
+ 
     <ProjectReference Include="..\RoomBookingNetCore3.Api\RoomBookingNetCore3.Api.csproj" />
     <ProjectReference Include="..\RoomBookingNetCore3.Business\RoomBookingNetCore3.Business.csproj" />
     <ProjectReference Include="..\RoomBookingNetCore3.Common\RoomBookingNetCore3.Common.csproj" />
